--- a/codelandia/index.html
+++ b/codelandia/index.html
@@ -1,79 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/fonts.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Codelândia</title>
-</head>
-<body>
-    <header class="header">
-        <div class="container">
-            <article class="header-group">
-                <nav class="menu">
-                    <a class="menu__item" href="#">Codelândia</a>
-                    <a class="menu__item" href="#">blog</a>
-                </nav>
-                <input class="search" type="text" placeholder="Pesquisar no blog">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./assets/css/reset.css">
+        <link rel="stylesheet" href="./assets/css/base.css">
+        <link rel="stylesheet" href="./assets/css/fonts.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <script src="https://unpkg.com/scrollreveal"></script>
+        <title>Codelândia</title>
+    </head>
+    <body>
+        <header class="header">
+            <div class="container">
+                <article class="header-group">
+                    <nav class="menu">
+                        <a class="menu__item" href="#">Codelândia</a>
+                        <a class="menu__item" href="#">blog</a>
+                        <a class="menu__item" href="#"><img src="./assets/images/sunny-outline.svg" class="theme-icon js-theme-icon" alt="Mudar tema"></a>
+                    </nav>
+                    <input class="search" type="text" placeholder="Pesquisar no blog">
+                </article>
+            </div>
+        </header>
+        <main class="main container">
+            <article class="article">
+                <div class="article__header">
+                    <p>02 de jul, 2022</p>
+                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                </div>
+                <div class="article__body text">
+                    <h2 class="text__title">Agora é oficial: o Windows 11 está vindo</h2>
+                    <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
+                </div>
             </article>
-        </div>
-    </header>
-    <main class="main container">
-        <article class="article">
-            <div class="article__header">
-                <p>02 de jul, 2021</p>
-                <button class="article__favorite-button" alt="Botão de favorito"></button>
-            </div>
-            <div class="article__body text">
-                <h2 class="text__title">Agora é oficial: o Windows 11 está vindo</h2>
-                <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
-            </div>
-        </article>
-        <article class="article">
-            <div class="article__header">
-                <p>02 de jul, 2021</p>
-                <button class="article__favorite-button" alt="Botão de favorito"></button>
-            </div>
-            <div class="article__body text">
-                <h2 class="text__title">Tim Berners-Lee vai leiloar código-fonte da web</h2>
-                <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
-            </div>
-        </article>
-        <article class="article">
-            <div class="article__header">
-                <p>02 de jul, 2021</p>
-                <button class="article__favorite-button" alt="Botão de favorito"></button>
-            </div>
-            <div class="article__body text">
-                <h2 class="text__title">Tem Firefox novo no pedaço e você vai querer migrar</h2>
-                <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
-            </div>
-        </article>
-        <article class="article">
-            <div class="article__header">
-                <p>02 de jul, 2021</p>
-                <button class="article__favorite-button" alt="Botão de favorito"></button>
-            </div>
-            <div class="article__body text">
-                <h2 class="text__title">John McAfee, criador do antivírus McAfee, morre</h2>
-                <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
-            </div>
-        </article>
-    </main>
-
-    <script>
-        const favoriteButtons = document.querySelectorAll(".article__favorite-button");
-
-        for(let button of favoriteButtons)
-            button.addEventListener("click", () => {
-                button.classList.toggle("article__favorite-button--filled");
-            }
-        )
-    </script>
-    
-</body>
+            <article class="article">
+                <div class="article__header">
+                    <p>02 de jul, 2021</p>
+                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                </div>
+                <div class="article__body text">
+                    <h2 class="text__title">Tim Berners-Lee vai leiloar código-fonte da web</h2>
+                    <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
+                </div>
+            </article>
+            <article class="article">
+                <div class="article__header">
+                    <p>02 de jul, 2021</p>
+                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                </div>
+                <div class="article__body text">
+                    <h2 class="text__title">Tem Firefox novo no pedaço e você vai querer migrar</h2>
+                    <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
+                </div>
+            </article>
+            <article class="article">
+                <div class="article__header">
+                    <p>02 de jul, 2021</p>
+                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                </div>
+                <div class="article__body text">
+                    <h2 class="text__title">John McAfee, criador do antivírus McAfee, morre</h2>
+                    <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
+                </div>
+            </article>
+        </main>
+        
+        <script src="./assets/js/script.js"></script>      
+    </body>
 </html>
