Ajuste no CSS responsivo

--- a/jordanshoes/index.html
+++ b/jordanshoes/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/variaveis.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
@@ -55,7 +56,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>@2021 Jordan Shoes | Todos os direitos reservados</p>
+        <p>Todos os direitos reservados</p>
     </footer>
 </body>
 </html>
