Efeitos e Animações  CSS

--- a/jordanshoes/index.html
+++ b/jordanshoes/index.html
@@ -31,27 +31,51 @@
         <section class="shoes container">
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/1.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 Mid Dutch Green</p>
+                </div>
             </div>
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/2.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 High Zoom Air CMFT Tropical Twist</p>
+                </div>
             </div>
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/3.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 High Court Purple</p>
+                </div>
             </div>
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/4.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 Mid Light Smoke Grey GS</p>
+                </div>
             </div>
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/5.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 Mid Black Noble Red</p>
+                </div>
             </div>
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/6.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 Mid Bright Citrus</p>
+                </div>
             </div>
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/7.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 Mid Grey Camo</p>
+                </div>
             </div>
             <div class="shoes__card">
                 <img class="shoes__item" src="./assets/images/8.png" alt="Imagem do tênis">
+                <div class="shoes__overlay">
+                    <p class="overlay-text">Air Jordan 1 Mid Carbon Fiber</p>
+                </div>
             </div>
         </section>
     </main>
