--- a/jordanshoes/index.html
+++ b/jordanshoes/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/variaveis.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>Jondan Shoes</title>
 </head>
 <body>
@@ -82,5 +83,7 @@
     <footer class="footer">
         <p>Todos os direitos reservados</p>
     </footer>
+    <script src="./assets/js/scrollReavealElements.js"></script>
+    <script src="./assets/js/typedElements.js"></script>
 </body>
 </html>
