--- a/codelandia/index.html
+++ b/codelandia/index.html
@@ -18,50 +18,50 @@
                     <nav class="menu">
                         <a class="menu__item" href="#">Codelândia</a>
                         <a class="menu__item" href="#">blog</a>
-                        <a class="menu__item" href="#"><img src="./assets/images/sunny-outline.svg" class="theme-icon js-theme-icon" alt="Mudar tema"></a>
+                        <a class="menu__item" href="#"><img src="./assets/images/sunny-outline.svg" class="theme-icon" alt="Mudar tema" data-icon-theme></a>
                     </nav>
-                    <input class="search" type="text" placeholder="Pesquisar no blog">
+                    <input class="search" type="text" placeholder="Pesquisar no blog" data-search>
                 </article>
             </div>
         </header>
         <main class="main container">
-            <article class="article">
+            <article class="article" data-article>
                 <div class="article__header">
                     <p>02 de jul, 2022</p>
-                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                    <button class="article__favorite-button" alt="Botão de favorito" data-button></button>
                 </div>
                 <div class="article__body text">
-                    <h2 class="text__title">Agora é oficial: o Windows 11 está vindo</h2>
+                    <h2 class="text__title" data-title>Agora é oficial: o Windows 11 está vindo</h2>
                     <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
                 </div>
             </article>
-            <article class="article">
+            <article class="article" data-article>
                 <div class="article__header">
                     <p>02 de jul, 2021</p>
-                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                    <button class="article__favorite-button" alt="Botão de favorito" data-button></button>
                 </div>
                 <div class="article__body text">
-                    <h2 class="text__title">Tim Berners-Lee vai leiloar código-fonte da web</h2>
+                    <h2 class="text__title" data-title>Tim Berners-Lee vai leiloar código-fonte da web</h2>
                     <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
                 </div>
             </article>
-            <article class="article">
+            <article class="article" data-article>
                 <div class="article__header">
                     <p>02 de jul, 2021</p>
-                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                    <button class="article__favorite-button" alt="Botão de favorito" data-button></button>
                 </div>
                 <div class="article__body text">
-                    <h2 class="text__title">Tem Firefox novo no pedaço e você vai querer migrar</h2>
+                    <h2 class="text__title" data-title>Tem Firefox novo no pedaço e você vai querer migrar</h2>
                     <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
                 </div>
             </article>
-            <article class="article">
+            <article class="article" data-article>
                 <div class="article__header">
                     <p>02 de jul, 2021</p>
-                    <button class="article__favorite-button" alt="Botão de favorito"></button>
+                    <button class="article__favorite-button" alt="Botão de favorito" data-button></button>
                 </div>
                 <div class="article__body text">
-                    <h2 class="text__title">John McAfee, criador do antivírus McAfee, morre</h2>
+                    <h2 class="text__title" data-title>John McAfee, criador do antivírus McAfee, morre</h2>
                     <p class="text__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rutrum tortor vitae venenatis lobortis. Nunc ornare iaculis erat ut commodo. Pellentesque ornare ante quis nulla tristique aliquet.</p>
                 </div>
             </article>
