--- a/jordanshoes/index.html
+++ b/jordanshoes/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/variaveis.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Jondan Shoes</title>
+    <title>Jordan Shoes</title>
 </head>
 <body>
     <header class="header">
